--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,8 @@
 @import '../../vendor/filament/filament/resources/css/app.css';
+
+.filament-login-page {
+    background-image: linear-gradient(
+        rgba(255, 255, 255, 0.5), 
+        rgba(255, 255, 255, 0.5)
+      ), url("../images/jovi_background.jpg");
+}
