--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,8 @@
 @import '../../vendor/filament/filament/resources/css/app.css';
-@import '../../vendor/saade/filament-fullcalendar/resources/css/filament-fullcalendar.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .filament-login-page {
     background-image: linear-gradient(
